# spitfire

./: Cargo.toml  README.md  justfile
backends/glow/: Cargo.toml
backends/glow/src/: lib.rs  renderer.rs
crates/_/: Cargo.toml
crates/_/examples/: app.rs  draw.rs  draw_to_surface.rs  drawables.rs  game.rs  gui.rs  hello_world.rs  input.rs  pixels.rs
crates/_/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/draw/: Cargo.toml
crates/draw/src/: canvas.rs  context.rs  draw_buffer.rs  lib.rs  nine_slice_sprite.rs  particles.rs  pixels.rs  primitives.rs  sprite.rs  text.rs  tiles.rs  utils.rs
crates/fontdue/: Cargo.toml
crates/fontdue/src/: lib.rs
crates/glow/: Cargo.toml
crates/glow/src/: app.rs  graphics.rs  lib.rs  renderer.rs
crates/gui/: Cargo.toml
crates/gui/src/: context.rs  interactions.rs  lib.rs  renderer.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
demos/game/: Cargo.toml  index.html  justfile
demos/game/src/: game.rs  lib.rs  main.rs
demos/web/: Cargo.toml  index.html  justfile
demos/web/src/: lib.rs
platform/_/: Cargo.toml
platform/_/src/: lib.rs
platform/core/: Cargo.toml
platform/core/src/: lib.rs
resources/: long_text.txt  text.txt
