[package]
name = "spitfire"
version = "0.31.2"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire"
readme = "../../README.md"

[features]
glow = ["spitfire-glow"]
fontdue = ["spitfire-fontdue"]
draw = ["spitfire-draw"]
input = ["spitfire-input"]
gui = ["spitfire-gui"]

[dependencies]
spitfire-core = { version = "0.31", path = "../core" }
spitfire-glow = { version = "0.31", path = "../glow", optional = true }
spitfire-fontdue = { version = "0.31", path = "../fontdue", optional = true }
spitfire-draw = { version = "0.31", path = "../draw", optional = true }
spitfire-input = { version = "0.31", path = "../input", optional = true }
spitfire-gui = { version = "0.31", path = "../gui", optional = true }

[dev-dependencies]
spitfire-core = { path = "../core" }
spitfire-glow = { path = "../glow" }
spitfire-fontdue = { path = "../fontdue" }
spitfire-draw = { path = "../draw" }
spitfire-input = { path = "../input" }
spitfire-gui = { path = "../gui" }
png = "0.17"
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
vek = "0.17"
glutin = "0.28"
raui-core = "0.66"
raui-immediate = "0.66"
raui-immediate-widgets = "0.66"
rand = "0.8"
