[package]
name = "spitfire-core"
version = "0.7.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Core module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-core"
readme = "../../README.md"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
