[package]
name = "spitfire-draw"
version = "0.30.1"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Drawing helper module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-draw"
readme = "../../README.md"

[dependencies]
spitfire-core = { version = "0.30", path = "../core" }
spitfire-glow = { version = "0.30", path = "../glow" }
spitfire-fontdue = { version = "0.30", path = "../fontdue" }
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
vek = "0.17"
smallvec = "1.11"
