[package]
name = "spitfire-fontdue"
version = "0.29.4"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Fontdue renderer module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-fontdue"
readme = "../../README.md"

[dependencies]
spitfire-core = { version = "0.29", path = "../core" }
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
etagere = "0.2"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
