[package]
name = "spitfire-glow"
version = "0.17.1"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "GLOW renderer module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-glow"
readme = "../../README.md"

[features]
debug_automatic_glGetError = ["glow/debug_automatic_glGetError"]

[dependencies]
spitfire-core = { version = "0.17", path = "../core" }
bytemuck = { version = "1", features = ["derive"] }
glow = "0.12"
glutin = "0.28"
vek = "0.16"
