[package]
name = "spitfire-glow"
version = "0.36.2"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "GLOW renderer module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-glow"
readme = "../../README.md"

[features]
debug_automatic_glGetError = ["glow/debug_automatic_glGetError"]

[dependencies]
spitfire-core = { version = "0.36", path = "../core" }
bytemuck = { version = "1", features = ["derive"] }
glow = "0.16"
vek = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.28"
wasm-bindgen = "0.2"
web-sys = "0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
