[package]
name = "spitfire-gui"
version = "0.27.2"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "GUI module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-gui"
readme = "../../README.md"

[dependencies]
spitfire-glow = { version = "0.27", path = "../glow" }
spitfire-fontdue = { version = "0.27", path = "../fontdue" }
spitfire-draw = { version = "0.27", path = "../draw" }
spitfire-input = { version = "0.27", path = "../input" }
raui-core = "0.61"
raui-immediate = "0.61"
vek = "0.16"
fontdue = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
