[package]
name = "spitfire-gui"
version = "0.36.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "GUI module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-gui"
readme = "../../README.md"

[dependencies]
spitfire-glow = { version = "0.36", path = "../glow" }
spitfire-fontdue = { version = "0.36", path = "../fontdue" }
spitfire-draw = { version = "0.36", path = "../draw" }
spitfire-input = { version = "0.36", path = "../input" }
raui-core = "0.70"
raui-immediate = "0.70"
vek = "0.17"
fontdue = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
