[package]
name = "spitfire-input"
version = "0.33.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Input module for Spitfire toolset"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/spitfire"
repository = "https://github.com/PsichiX/spitfire"
documentation = "https://docs.rs/spitfire-input"
readme = "../../README.md"

[dependencies]
typid = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
