[package]
name = "game"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "game_web"
crate-type = ["cdylib"]

[dependencies.spitfire]
version = "0.25"
path = "../../crates/_/"
features = ["glow", "fontdue", "draw", "input", "gui"]

[dependencies]
png = "0.17"
fontdue = "0.8"
vek = "0.16"
raui-immediate = "0.56"
raui-immediate-widgets = "0.56"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.26"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
