[package]
name = "web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.spitfire]
version = "0.19"
path = "../../crates/_/"
features = ["glow", "fontdue", "draw", "input", "gui"]

[dependencies]
wasm-bindgen = "0.2"
png = "0.17"
fontdue = "0.7"
vek = "0.16"
winit = "0.26"
raui-immediate = "0.55"
raui-immediate-widgets = "0.55"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
